fix: comment out logging in update method and adjust modal backdrop z-index

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -163,3 +163,6 @@ a{
       margin-left: 0;
     }
 }
+.modal-backdrop{
+  z-index: 999;
+}
